implements of stock manipulating